--- a/package.json
+++ b/package.json
@@ -12,50 +12,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/cdk": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/material": "^6.0.1",
-    "@angular/platform-browser": "^6.0.0", 
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@ngx-translate/core": "^10.0.1",
+    "@angular/animations": "^7.0.2",
+    "@angular/cdk": "^7.0.2",
+    "@angular/common": "^7.0.2",
+    "@angular/compiler": "^7.0.2",
+    "@angular/core": "^7.0.2",
+    "@angular/forms": "^7.0.2",
+    "@angular/http": "^7.0.2",
+    "@angular/material": "^7.0.2",
+    "@angular/platform-browser": "^7.0.2",
+    "@angular/platform-browser-dynamic": "^7.0.2",
+    "@angular/platform-server": "^7.0.2",
+    "@angular/router": "^7.0.2",
+    "@ngrx/store": "^6.1.2",
+    "@ngx-translate/core": "^11.0.0",
     "@ngx-translate/http-loader": "^3.0.1",
-    "@types/underscore": "^1.8.8",
+    "@types/underscore": "^1.8.9",
     "body-parser": "^1.18.2",
-    "core-js": "^2.5.6",
+    "core-js": "^2.5.7",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "mongoose": "^5.0.17",
-    "rxjs": "^6.1.0",
-    "rxjs-compat": "^6.1.0",
-    "typescript": "^2.7.2",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "underscore": "^1.9.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "^6.0.0",
-    "@angular/language-service": "^6.0.0",
-    "@types/jasmine": "^2.8.7",
+    "@angular-devkit/build-angular": "^0.10.3",
+    "@angular/cli": "^7.0.3",
+    "@angular/compiler-cli": "^7.0.2",
+    "@angular/language-service": "^7.0.2",
+    "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^10.0.4",
-    "codelyzer": "^4.3.0",
-    "jasmine-core": "^3.1.0",
+    "@types/node": "^10.12.1",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.0.0",
-    "protractor": "^5.3.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.1",
+    "rxjs-tslint": "^0.1.5",
     "ts-node": "^6.0.3",
-    "tslint": "^5.10.0"
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.5",
+    "webpack": "^4.23.1"
   }
 }
