--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^7.0.2",
     "@angular/platform-server": "^7.0.2",
     "@angular/router": "^7.0.2",
+    "@ngrx/effects": "^6.1.2",
     "@ngrx/store": "^6.1.2",
     "@ngx-translate/core": "^11.0.0",
     "@ngx-translate/http-loader": "^3.0.1",
