--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "mongoose": "^5.0.17",
+    "node-schedule": "^1.3.1",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "underscore": "^1.9.1",
