--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,10 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/primeng/resources/themes/cruze/theme.css",
+              "node_modules/primeng/resources/primeng.css"
             ],
             "scripts": []
           },
