--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "body-parser": "^1.18.2",
     "core-js": "^2.5.7",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "mongoose": "^5.0.17",
     "node-schedule": "^1.3.1",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.0.5",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "underscore": "^1.9.1",
