--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/styles.scss",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/primeng/resources/themes/cruze/theme.css",
-              "node_modules/primeng/resources/primeng.css"
+              "node_modules/primeng/resources/primeng.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
