--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-schedule": "^1.3.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.5",
+    "query-string": "^6.3.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "underscore": "^1.9.1",
@@ -67,6 +68,10 @@
     "ts-node": "^6.0.3",
     "tslint": "^5.11.0",
     "typescript": "^3.1.5",
-    "webpack": "^4.29.3"
+    "webpack": "^4.29.3",
+    "moq.ts": "2.8.5",
+    "ng-auto-moq": "3.0.3",
+    "jasmine-marbles": "^0.4.1",
+    "rxjs-marbles": "^5.0.0"
   }
 }
