--- a/package.json
+++ b/package.json
@@ -12,66 +12,66 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.2",
-    "@angular/cdk": "^7.0.2",
-    "@angular/common": "^7.0.2",
-    "@angular/compiler": "^7.0.2",
-    "@angular/core": "^7.0.2",
-    "@angular/forms": "^7.0.2",
-    "@angular/http": "^7.0.2",
-    "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "^7.0.2",
-    "@angular/platform-browser-dynamic": "^7.0.2",
-    "@angular/platform-server": "^7.0.2",
-    "@angular/router": "^7.0.2",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/platform-server": "^7.2.15",
+    "@angular/router": "^7.2.15",
     "@ngmodule/material-carousel": "^0.3.1",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/store": "^6.1.2",
-    "@ngx-translate/core": "^11.0.0",
+    "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^3.0.1",
-    "@types/underscore": "^1.8.9",
-    "body-parser": "^1.18.2",
-    "core-js": "^2.5.7",
-    "express": "^4.16.3",
+    "@types/underscore": "^1.8.18",
+    "body-parser": "^1.19.0",
+    "core-js": "^2.6.8",
+    "express": "^4.17.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
-    "moment": "^2.22.1",
-    "mongoose": "^5.4.11",
-    "node-schedule": "^1.3.1",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.5.11",
+    "node-schedule": "^1.3.2",
     "primeicons": "^1.0.0",
-    "primeng": "^7.0.5",
-    "query-string": "^6.3.0",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
+    "primeng": "^7.1.3",
+    "query-string": "^6.5.0",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
+    "typescript": "^3.1.5",
     "underscore": "^1.9.1",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.1",
-    "@angular/cli": "^7.0.3",
-    "@angular/compiler-cli": "^7.0.2",
-    "@angular/language-service": "^7.0.2",
-    "@types/jasmine": "^2.8.9",
-    "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^10.12.1",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^10.14.7",
     "codelyzer": "^4.5.0",
-    "jasmine-core": "^3.3.0",
+    "jasmine-core": "^3.4.0",
+    "jasmine-marbles": "^0.4.1",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^3.1.1",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "^5.4.1",
-    "rxjs-tslint": "^0.1.5",
-    "ts-node": "^6.0.3",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.5",
-    "webpack": "^4.29.3",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "moq.ts": "2.8.5",
     "ng-auto-moq": "3.0.3",
-    "jasmine-marbles": "^0.4.1",
-    "rxjs-marbles": "^5.0.0"
+    "protractor": "^5.4.2",
+    "rxjs-marbles": "^5.0.2",
+    "rxjs-tslint": "^0.1.7",
+    "ts-node": "^6.2.0",
+    "tslint": "^5.16.0",
+    "webpack": "^4.32.2"
   }
 }
