--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "primeng": "^7.1.3",
     "query-string": "^6.5.0",
     "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
     "typescript": "^3.1.5",
     "underscore": "^1.9.1",
     "zone.js": "^0.9.1"
