--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^3.0.1",
     "@types/underscore": "^1.8.18",
+    "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "core-js": "^2.6.8",
+    "email-templates": "^6.0.0",
     "express": "^4.17.0",
     "font-awesome": "^4.7.0",
+    "handlebars": "^4.1.2",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.11",
     "node-schedule": "^1.3.2",
+    "nodemailer": "^6.2.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.3",
     "query-string": "^6.5.0",
